--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -5,7 +5,7 @@ global:
 scrape_configs:
 
 # source and more doc https://github.com/prometheus/snmp_exporter
-  - job_name: 'snmp_exporter'
+  - job_name: 'snmp_exporter-if_mib'
     # 2m scrape_interval for this job
     scrape_interval: 2m
     # 10s timeout cause snmp is UDP and we don't want to wait too long
@@ -29,3 +29,53 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: snmp-exporter:9116
+
+  - job_name: 'snmp-if_mib-cisco'
+    # 2m scrape_interval for this job
+    scrape_interval: 2m
+    # 10s timeout cause snmp is UDP and we don't want to wait too long
+    scrape_timeout: 10s
+    # The target you wanna SNMP to
+    static_configs:
+      - targets: ['localhost']
+        # Added label to identify the target who get SNMP
+        labels:
+          job: 'snmp_exporter'
+          instance: 'localhost'
+    metrics_path: /snmp
+    # SNMP module who is set in snmp.yml
+    params:
+      module: [if_mib_cisco]
+    # Relabel config to passe the request to the snmp-exporter
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116
+
+  - job_name: 'snmp-if_mib-extreme'
+    # 2m scrape_interval for this job
+    scrape_interval: 2m
+    # 10s timeout cause snmp is UDP and we don't want to wait too long
+    scrape_timeout: 10s
+    # The target you wanna SNMP to
+    static_configs:
+      - targets: ['localhost']
+        # Added label to identify the target who get SNMP
+        labels:
+          job: 'snmp_exporter'
+          instance: 'localhost'
+    metrics_path: /snmp
+    # SNMP module who is set in snmp.yml
+    params:
+      module: [if_mib_extreme]
+    # Relabel config to passe the request to the snmp-exporter
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116   
